# rust_check

./: Cargo.toml  new_file.txt  sample.txt
src/: lib.rs
tests/: test.rs
